Clean up build directories and code updates